After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675062 - Segmentation fault (with backtrace)
Segmentation fault (with backtrace)
Status: RESOLVED FIXED
Product: bluefish
Classification: Other
Component: application
development (SVN TRUNK)
Other Linux
: Normal major
: 2.2.3
Assigned To: Bluefish Maintainer(s)
Bluefish Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-04-29 09:13 UTC by Daniel Leidert
Modified: 2012-04-30 19:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test file (139 bytes, application/javascript)
2012-04-29 09:13 UTC, Daniel Leidert
Details
backtrace (8.21 KB, text/plain)
2012-04-29 09:13 UTC, Daniel Leidert
Details

Description Daniel Leidert 2012-04-29 09:13:21 UTC
Created attachment 213040 [details]
test file

An Ubuntu user reported a crash. To reproduce open the attached file and insert single quotes inside the parenthesis in tagClick(). I was able to reproduce the crash with the latest SVN version, so a backtrace is attached.

SVN revision 7413

Bluefish was configured with: ../configure  'CONFIG_SITE=../config.site/config.debian.opt'
Comment 1 Daniel Leidert 2012-04-29 09:13:51 UTC
Created attachment 213041 [details]
backtrace
Comment 2 Olivier Sessink 2012-04-29 12:14:37 UTC
it looks like a gtk bug, from the backtrace it seems to be in the scrolling of the gtktextview widget or something like that. what do you think?
Comment 3 Olivier Sessink 2012-04-29 22:38:30 UTC
with debugging symbols the backtrace is quite different (and clearly a bluefish bug):

Program received signal SIGSEGV, Segmentation fault.
0x00007ffff42d1aa9 in ?? () from /lib/libglib-2.0.so.0
(gdb) bt
  • #0 ??
    from /lib/libglib-2.0.so.0
  • #1 g_slice_free1
    from /lib/libglib-2.0.so.0
  • #2 remove_cache_entry
    at bftextview2_scanner.c line 321
  • #3 remove_invalid_cache
    at bftextview2_scanner.c line 837
  • #4 found_match
    at bftextview2_scanner.c line 1038
  • #5 bftextview2_run_scanner
    at bftextview2_scanner.c line 1329
  • #6 bftextview2_scanner_scan
    at bftextview2.c line 296
  • #7 bftextview2_scanner_idle
    at bftextview2.c line 324
  • #8 g_main_context_dispatch
    from /lib/libglib-2.0.so.0
  • #9 ??
    from /lib/libglib-2.0.so.0
  • #10 g_main_loop_run
    from /lib/libglib-2.0.so.0
  • #11 IA__gtk_main
    at /build/buildd/gtk+2.0-2.20.1/gtk/gtkmain.c line 1219
  • #12 main
    at bluefish.c line 402

Comment 4 Olivier Sessink 2012-04-30 19:01:04 UTC
fixed in revision 7418.