this should fix the crash reported in https://bugzilla.gnome.org/show_bug.cgi?id=675062

git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@7418 7640d186-872a-4c71-b7b2-a5696852cc35