src/bftextview2_private.h
@@ -35,9 +35,9 @@ extern void g_none(char *first, ...);
 /*#define DUMP_SCANCACHE*/
 /*#define CHECK_CONSISTENCY*/
 
-#define DBG_MSG g_print
-#define DBG_SCANCACHE g_print
-#define DBG_SCANNING g_print
+#define DBG_MSG DBG_NONE
+#define DBG_SCANCACHE DBG_NONE
+#define DBG_SCANNING DBG_NONE
 #define DBG_BLOCKMATCH DBG_NONE
 #define DBG_PATCOMPILE DBG_NONE
 #define DBG_SIGNALS DBG_NONE
@@ -49,9 +49,6 @@ extern void g_none(char *first, ...);
 #define DBG_TOOLTIP DBG_NONE
 #define DBG_SPELL DBG_NONE
 #define DBG_IDENTIFIER DBG_NONE
-
-
-
 
 #define NUMSCANCHARS 127		/* 128 is ascii, but the last character is never scanned (DEL)
 								   and the Ttablerow has one more 16bit value. By setting this to 127 instead of 128
